--- a/public/cdn/shop/t/151/assets/theme.css@v=150447602840016411881700499020.css
+++ b/public/cdn/shop/t/151/assets/theme.css@v=150447602840016411881700499020.css
@@ -4887,11 +4887,11 @@ a.review {
 
 .radio__fieldset .radio__button input.sold-out:checked+label:before,
 .radio__fieldset .radio__button input.unavailable:checked+label:before {
-  background-color: #CD998E
+  background-color: #8ea976
 }
 
 .radio__fieldset .radio__button input:checked~label {
-  border: 1px solid #CD998E
+  border: 1px solid #8ea976
 }
 
 .radio__fieldset--small {
@@ -5181,7 +5181,7 @@ a.review {
 }
 
 .swatch__button input~label[data-swatch=white i]:after {
-  border-color: #CD998E
+  border-color: #8ea976
 }
 
 .swatch__button input.sold-out~label[data-swatch=black i]:before,
@@ -5836,7 +5836,7 @@ a.review {
 
 .product-item:hover .product__grid__cutline,
 .product-item:hover .product__grid__title {
-  color: #CD998E
+  color: #8ea976
 }
 
 .product__grid__cutline {
