--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background-color: #0E3530 !important;
+  background-color: #ebebd3 !important;
 }
 
 /* START: General styles */
@@ -42,7 +42,7 @@ body {
 }
 
 /* END: General styles */
- 
+
 /* END: search manufacturer styles */
 
 .bg-c1 {
@@ -93,30 +93,30 @@ body {
 
 
 .sywVideo {
-  color: #0E3530 !important;
+  color: #ebebd3 !important;
   background-color: transparent !important;
 }
 
 .sywCarousel {
-  color: #0E3530 !important;
+  color: #ebebd3 !important;
 }
 
 .sywProductTabs-title {
-  color: #0E3530 !important;
+  color: #ebebd3 !important;
   background-color: transparent !important;
 }
 
 .sywPaymentOptions {
-  color: #0E3530 !important;
+  color: #ebebd3 !important;
 }
 
 .SiteFooter__wrapper {
-  background: #0E3530 !important;
+  background: #ebebd3 !important;
 }
 
 
 a:hover {
-  color: #CD998E !important;
+  color: #8ea976 !important;
   text-decoration: none;
 }
 
@@ -127,7 +127,7 @@ a:hover {
 
 .syw-cta-desktop:hover,
 .syw-cta-desktop:focus {
-  color: #0E3530 !important;
+  color: #ebebd3 !important;
   text-decoration: none;
 }
 
@@ -136,13 +136,13 @@ a:hover {
 .syw-usps {
   background: transparent !important;
 }
- 
+
 
 .klaviyo_submit_button {
   font-family: "Lato", sans-serif;
   font-size: 12px;
   font-weight: 700;
-  background: #CD998E;
+  background: #8ea976;
   text-align: center;
   padding: 0 5px;
   min-width: 100%;
@@ -174,22 +174,20 @@ a:hover {
 
 @media (max-width: 2300px) and (max-height: 900px) {
   #PageMenuPreHeader {
-    background-color: #0E3530
+    background-color: #ebebd3
   }
 }
 
 
 
 
-@media (min-width: 1300px) {
-   
-}
+@media (min-width: 1300px) {}
 
 
 
 
 @media (max-width: 1199px) {
-  
+
 
   #PageMenuPreHeader {
     background-color: #fff
@@ -214,7 +212,7 @@ a:hover {
   }
 
   .logo {
-    max-height: 250px; 
+    max-height: 250px;
   }
 
 }
@@ -226,7 +224,7 @@ a:hover {
 
   #newB2 {
     left: 28em
-  } 
+  }
 
 }
 
@@ -240,7 +238,7 @@ a:hover {
 
 
 #anchorNew:hover {
-  color: #0E3530 !important;
+  color: #ebebd3 !important;
 }
 
 .form-control {
@@ -269,7 +267,7 @@ a:hover {
 
 
 .HtmlProductAddToCart {
-  background-color: #CD998E !important;
+  background-color: #8ea976 !important;
 }
 
 button:focus {
@@ -362,67 +360,69 @@ button:focus {
 
 
 
- 
+
 .wallet-image {
   display: none;
 }
 
 .wallet-image.desktop {
-  display: block;  
+  display: block;
 }
 
-#logotoedit{ 
+#logotoedit {
   width: 7%;
   position: absolute;
   top: 3em;
   left: 2em;
 }
 
-#logotoedits{
-  margin-top:2em;
+#logotoedits {
+  margin-top: 2em;
 }
 
-#myUniD{
+#myUniD {
   box-shadow: 1px 1px 20px #0000001f;
-        background: #0d0d0dcc;
-        backdrop-filter: saturate(180%) blur(2rem);
-        -webkit-backdrop-filter: saturate(180%) blur(2rem);
-        border: 1px solid rgba(229, 231, 235, .2);
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
-   
+  background: #0d0d0dcc;
+  backdrop-filter: saturate(180%) blur(2rem);
+  -webkit-backdrop-filter: saturate(180%) blur(2rem);
+  border: 1px solid rgba(229, 231, 235, .2);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+
 }
 
 @media (max-width: 768px) {
-  #logotoedits{
-    margin-top:initial;
+  #logotoedits {
+    margin-top: initial;
   }
+
   .wallet-image.desktop {
     display: none;
   }
+
   .wallet-image.mobile {
-    display: block;  
+    display: block;
   }
 
-  #myUniD{
+  #myUniD {
     position: fixed;
   }
 
-  #logotoedit{ 
+  #logotoedit {
     width: 80px;
     margin-top: initial;
   }
- 
 
- 
 
-.SiteFooter__footNote{
-  margin-bottom: 4em;
-}
 
-#yourDivId{
-  margin-top: 2em;
-}
+
+  .SiteFooter__footNote {
+    margin-bottom: 4em;
+  }
+
+  #yourDivId {
+    margin-top: 2em;
+  }
 
 
 }
@@ -438,24 +438,28 @@ a:hover {
 }
 
 
-h1,h2,h3 ,div, button{ 
+h1,
+h2,
+h3,
+div,
+button {
   font-family: 'Futura Std', sans-serif !important;
-  color:white !important;
-  text-transform: uppercase !important;                                                
-                                                
+  color: white !important;
+  text-transform: uppercase !important;
+
 }
 
 
-#mybbtn{
-  border-color: #CD998E !important;
+#mybbtn {
+  border-color: #8ea976 !important;
   padding: 8px 20px;
-  border: 2px solid #CD998E;
+  border: 2px solid #8ea976;
   border-radius: 10px;
   font-size: 18px;
   font-weight: bold;
   color: white;
   background-color: transparent;
-  letter-spacing: 1px; 
+  letter-spacing: 1px;
 
 
 }
@@ -470,15 +474,18 @@ h1,h2,h3 ,div, button{
   justify-content: center;
   width: 100%;
   margin-top: 20px;
-  padding: 0 20px; /* Adds padding on the sides for mobile */
+  padding: 0 20px;
+  /* Adds padding on the sides for mobile */
 }
 
 @media(min-width: 768px) {
+
   /* On larger screens, switch to row layout */
   .odd-container {
     flex-direction: row;
     gap: 20px;
-    padding: 0; /* Remove side padding for larger screens */
+    padding: 0;
+    /* Remove side padding for larger screens */
   }
 }
 
@@ -492,8 +499,10 @@ h1,h2,h3 ,div, button{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start; /* Align text and buttons to the left */
-  gap: 20px; /* Space between elements */
+  align-items: flex-start;
+  /* Align text and buttons to the left */
+  gap: 20px;
+  /* Space between elements */
 }
 
 #vid-xtra {
@@ -505,7 +514,8 @@ h1,h2,h3 ,div, button{
 #vid-word-blast {
   position: absolute;
   bottom: 20%;
-  left: 10%; /* Align text to the left */
+  left: 10%;
+  /* Align text to the left */
   transform: translateX(0);
   color: white;
   font-size: 3rem;
@@ -514,10 +524,10 @@ h1,h2,h3 ,div, button{
   text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
- 
+
 
 #vid-action-push:hover {
-  background-color: #CD998E;
+  background-color: #8ea976;
 }
 
 /* Image container with a weird id */
@@ -536,8 +546,10 @@ h1,h2,h3 ,div, button{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start; /* Align text and buttons to the left */
-  gap: 20px; /* Space between elements */
+  align-items: flex-start;
+  /* Align text and buttons to the left */
+  gap: 20px;
+  /* Space between elements */
 }
 
 .pic-bubble {
@@ -549,7 +561,8 @@ h1,h2,h3 ,div, button{
 .pic-tagline {
   position: absolute;
   bottom: 16%;
-  left: 10%; /* Align text to the left */
+  left: 10%;
+  /* Align text to the left */
   transform: translateX(0);
   color: white;
   font-size: 2rem;
@@ -561,18 +574,19 @@ h1,h2,h3 ,div, button{
 .pic-button-splash {
   position: absolute;
   bottom: 4%;
-  left: 10%; /* Align button to the left */
+  left: 10%;
+  /* Align button to the left */
   transform: translateX(0);
-  background-color: #CD998E; 
-  transition: background-color 0.3s ease; 
-  border-color: #CD998E !important;
+  background-color: #8ea976;
+  transition: background-color 0.3s ease;
+  border-color: #8ea976 !important;
   padding: 8px 20px;
-  border: 2px solid #CD998E;
+  border: 2px solid #8ea976;
   border-radius: 10px;
   font-size: 18px;
   font-weight: bold;
-  color: white; 
-  letter-spacing: 1px; 
+  color: white;
+  letter-spacing: 1px;
   box-shadow: 1px 1px 20px #0000001f;
   background: #0d0d0d3a;
   backdrop-filter: saturate(180%) blur(2rem);
@@ -580,56 +594,155 @@ h1,h2,h3 ,div, button{
 }
 
 .pic-button-splash:hover {
-  background-color: #CD998E;
+  background-color: #8ea976;
 }
 
 /* For mobile responsiveness */
 @media (max-width: 768px) {
+
   /* Add margin for mobile screens between content and edges */
   .odd-container {
-    padding: 0 20px; /* Add padding to left and right on small screens */
+    padding: 0 20px;
+    /* Add padding to left and right on small screens */
   }
 
   /* Adjust video and images for better mobile display */
   #vid-jump {
     width: 100%;
-    height: auto; /* Allow video to adjust to screen size */
+    height: auto;
+    /* Allow video to adjust to screen size */
     margin-bottom: 20px;
   }
 
   .pic-dream {
     width: 100%;
-    height: auto; /* Allow images to adjust to screen size */
+    height: auto;
+    /* Allow images to adjust to screen size */
   }
 }
 
 
 header {
-  background-color:#0E3530 !important;
+  background-color: #ebebd3 !important;
 }
+
 #filterId1 {
-  background-color:#0E3530 !important;
+  background-color: #ebebd3 !important;
 }
 
 @media (min-width: 1200px) {
   @media (pointer: fine) {
-      .xl\:pointer-fine\: {
-          --tw-bg-opacity: 1;
-          background-color: transparent !important;
+    .xl\:pointer-fine\: {
+      --tw-bg-opacity: 1;
+      background-color: transparent !important;
+    }
+  }
+
+  #logotoedits{
+    width: 150px;
+   }
+}
+
+.MiniCart_Cart_Heading {
+  background-color: #ebebd3 !important;
+}
+
+#sec-9a83 {
+  background-color: #ebebd3 !important;
+}
+
+.u-section-1 {
+  background-color: #ebebd3 !important;
+}
+
+.myBB {
+  color: #8ea976 !important;
+}
+
+
+
+
+
+
+@media (max-width: 2300px) and (max-height: 900px) {
+  #PageMenuPreHeader {
+    background-color: #0d0d0dcc !important;
+    position: fixed;
+    top: -2em;
+    right: 0;
+  }
+  #logotoedits{
+    position: fixed;
+    top: 1em;
+    left: 2em;
+  }
+}
+
+
+
+@media (max-width: 720px) {
+  #PageMenuPreHeader {
+    position: sticky;
+  }
+  #logotoedits{
+    position: sticky;  
+  }
+  #filterId1 { 
+    z-index: 99999999999999999;
+  }
+}
+
+#myUniD {
+  position: fixed;
+  top: 1em;
+}
+
+.myNewC{
+  color: #8ea976 !important;
+}
+
+@media (min-width: 1200px) {
+  @media (pointer: fine) {
+      .secondaryLevel {
+          top: 80px !important;
       }
   }
 }
 
-.MiniCart_Cart_Heading { 
-  background-color: #0E3530 !important;
+.menuicon {
+  position: relative;
+  display: inline-block;
 }
 
-#sec-9a83{
-  background-color: #0E3530 !important;
+.cart-count {
+  position: absolute;
+  bottom: -5px;
+  right: -5px;
+  background-color: #8ea976;
+  color: white;
+  font-size: 8px;
+  font-weight: bold;
+  width: 14px;
+  height: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
 }
 
-.u-section-1 {
-  background-color: #0E3530 !important;
+
+
+@media (min-width: 1200px) {
+  @media (pointer: fine) {
+      .xl\:pointer-fine\:br_pb-0 {
+          padding-bottom: 0;
+          margin-left: 17em;
+          margin-top: 1em;
+      }
+  }
 }
 
- 
+
+input{
+  color: #222 !important;
+}
