--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 
 @tailwind base;
 @tailwind components;
@@ -792,8 +794,72 @@ input{
   color: #222 !important;
 }
 
+.myGray{
+  color: #222 !important;
+}
+
 
 .pageHeaderMenuOverlay.open{
   position: fixed;
 }
 
+
+
+
+.br_line-through {
+  text-decoration: line-through;
+  text-decoration-color: red;
+}
+
+
+
+
+
+
+
+
+
+
+
+.image-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.default-img,
+.hover-img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  transition: opacity 0.3s ease-in-out;
+  
+}
+
+.hover-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0; /* Initially hidden */
+}
+
+/* Desktop Hover Effect */
+.image-container:hover .default-img {
+  opacity: 0;
+}
+
+.image-container:hover .hover-img {
+  opacity: 1;
+}
+
+/* Mobile Touch Effect (Only for the touched image) */
+.image-container.touch-active .default-img {
+  opacity: 0;
+}
+
+.image-container.touch-active .hover-img {
+  opacity: 1;
+}
